--- a/Telefonia/views/layout/base.html
+++ b/Telefonia/views/layout/base.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/css/tv.css"/> 
     <link rel="stylesheet" href="/css/tools.css"/> 
     <link rel="stylesheet" href="/css/buscador.css"/> 
+    <link rel="stylesheet" href="/css/configurador.css"/> 
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/uikit.js"></script>
