--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -153,8 +153,9 @@
         </div>
 
         <div class="configurador-precio">
-            <h3 class="configurar-h3-card">Finaliza tu pedido</h3>
-      
+            <h3 class="configurar-h3-card"><strong>TOTAL 78,99 €/mes</strong></h3>
+            <button class="button-configurar ">CONTRATAR</button>
+            <button class="outline">VER DESGLOSE</button>
         </div>
     </div>
 
