--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -32,20 +32,20 @@
 <header class="header-big-container">
     <div class="header-contaiter-1">
         <a>Autónomos y empresas</a>
-        <a>contacto</a>
+        <a>Contacto</a>
         <a>Area Clientes</a>
     </div>
     <div class="header-contaiter-2">
         <a href="/"><img width="400" src="../../public/images/nombre.png" alt=""></a>
     </div>
     <div class="header-contaiter-3">
-        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Línea Internet</span></a>
-        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Línea Móvil</span></a>
-        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Línea TV</span></a>
-        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Packs</span></a>
-        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Móviles y más</span></a>
-        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Herramientas</span></a>
-        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>contacto</span></a>
+        <a class="header-link"><img  src="../../public/images/header/linea-internt.png" alt=""><span>Línea Internet</span></a>
+        <a class="header-link"><img  src="../../public/images/header/linea-movil.png" alt=""><span>Línea Móvil</span></a>
+        <a class="header-link"><img  src="../../public/images/header/linea-tv.png" alt=""><span>Línea TV</span></a>
+        <a class="header-link"><img  src="../../public/images/header/packs.png" alt=""><span>Packs</span></a>
+        <a class="header-link"><img  src="../../public/images/header/movilesymas.png" alt=""><span>Móviles y más</span></a>
+        <a class="header-link"><img  src="../../public/images/header/tools.png" alt=""><span>Herramientas</span></a>
+        <a class="header-link"><img  src="../../public/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
     </div>
 </header>
 
