--- a/Telefonia/views/layout/base.html
+++ b/Telefonia/views/layout/base.html
@@ -78,20 +78,20 @@
 <header class="header-big-container">
     <div class="header-contaiter-1">
         <a>Autónomos y empresas</a>
-        <a>Ayuda</a>
+        <a>Contacto</a>
         <a>Area Clientes</a>
     </div>
     <div class="header-contaiter-2">
-        <a href="/"><img width="400" src="images/nombre.png" alt=""></a>
+        <a href="/"><img width="400" src="/images/nombre.png" alt=""></a>
     </div>
     <div class="header-contaiter-3">
-        <a href="/linea-internet"><img  src="images/header/linea-internet.png" alt=""><span>Línea Internet</span></a>
-        <a href="/linea-movil"><img  src="images/header/linea-internet.png" alt=""><span>Línea Móvil</span></a>
-        <a href="/tv"><img  src="images/header/linea-internet.png" alt=""><span>Línea TV</span></a>
-        <a href="/packs"><img  src="images/header/linea-internet.png" alt=""><span>Packs</span></a>
-        <a href="/movilesymas"><img  src="images/header/linea-internet.png" alt=""><span>Móviles y más</span></a>
-        <a href="/tools"><img  src="images/header/linea-internet.png" alt=""><span>Herramientas</span></a>
-        <a href="/ayuda"><img  src="images/header/linea-internet.png" alt=""><span>Ayuda</span></a>
+        <a href="/linea-internet" class="header-link"><img  src="/images/header/linea-internt.png" alt=""><span>Línea Internet</span></a>
+        <a href="/linea-movil" class="header-link"><img  src="/images/header/linea-movil.png" alt=""><span>Línea Móvil</span></a>
+        <a href="/tv" class="header-link"><img  src="/images/header/linea-tv.png" alt=""><span>Línea TV</span></a>
+        <a href="/packs" class="header-link"><img  src="/images/header/packs.png" alt=""><span>Packs</span></a>
+        <a href="/movilesymas" class="header-link"><img  src="/images/header/movilesymas.png" alt=""><span>Móviles y más</span></a>
+        <a href="/tools" class="header-link"><img  src="/images/header/tools.png" alt=""><span>Herramientas</span></a>
+        <a href="/ayuda" class="header-link"><img  src="/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
     </div>
 </header>
 
