--- a/Telefonia/views/linea-movil.html
+++ b/Telefonia/views/linea-movil.html
@@ -5,7 +5,7 @@
         <div class="tarifa-linea-movil">
             <h3><strong>19,99 €/mes</strong></h3>
             <div class="info-tarifa-linea-movil">
-              <img  src="/images/header/linea-internet.png" alt="">
+              <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
               <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
             </div>
           <button class="button">Contratar</button>
@@ -13,7 +13,7 @@
         <div class="tarifa-linea-movil">
           <h3><strong>29,99 €/mes</strong></h3>
           <div class="info-tarifa-linea-movil">
-            <img  src="/images/header/linea-internet.png" alt="">
+            <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
             <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
           </div>
         <button class="button">Contratar</button>
@@ -21,7 +21,7 @@
       <div class="tarifa-linea-movil">
           <h3><strong>49,99 €/mes</strong></h3>
           <div class="info-tarifa-linea-movil">
-            <img  src="/images/header/linea-internet.png" alt="">
+            <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
             <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
           </div>
         <button class="button">Contratar</button>
@@ -29,7 +29,7 @@
     </div>
     <div class="contacto-linea-movil-container">
         <div class="contacto-linea-movil">
-            <img  src="/images/header/linea-internet.png" alt="">
+            <img  src="/images/icons/settings_input_component_black_48dp.svg" alt="">
             <div class="info-contact-lineas-movil">
                 <h3>Configura tu tarifa a tu medida</h3>
                 <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de movil, de movil o de TV</p>
@@ -41,7 +41,7 @@
         <h3>TAMBIÉN <strong>PODRÍA INTERESARTE</strong></h3>
         <div class="interes-container">
             <div class="interes">
-                <img class="interes-img" src="/images/slider1.png" >
+                <img class="interes-img" src="/images/roaming.jpg" >
                 <div class="interes-info-cont">
                     <h2>Roaming</h2>
                     <div>
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="interes">
-                <img class="interes-img" src="/images/slider2.png" >
+                <img class="interes-img" src="/images/lineas-adicionales.jpg" >
                 <div class="interes-info-cont">
                     <h2>Líneas adicionales</h2>
                     <p>Si dispones de una línea móvil puedes adquirir líneas adicionales con descuento sobre su precio original.</p>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="interes">
-                <img class="interes-img" src="/images/slider1.png" >
+                <img class="interes-img" src="/images/gb-adicionales.jpg" >
                 <div class="interes-info-cont">
                     <h2>Bonos GB adicionales</h2>
                     <p>Si te quedas con datos disponibles en cualquiera de tus líneas móviles puedes adquirir un bono de <strong>1 GB de datos extra</strong> hasta que se renueven tus datos el siguiente més. <strong> Compatible con roaming</strong></p>
