--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/configurador.css"/>
+    <link rel="stylesheet" href="../../public/css/tv.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -48,117 +48,88 @@
         <a class="header-link"><img  src="../../public/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
     </div>
 </header>
-
-
-<div class="configurador-content">
-    <h1>Configurador de Packs</h1>
-    <h2>Utilice nuestro configurador de packs para crear un pakc personalizado que se ajuste a sus necesidades. Seleccione las opciones que desee oara cada uno de los elementos del pack</h2>
-    <div class="configurador-container">
-        <div class="configurador-card">
-            <h3 class="configurar-h3-card">Línea Internet y Fijo</h3>
-            <div class="configurador-velocidad">
-                <div class="configurador-velocidad-1">
-                    <img  src="../../public/images/header/linea-internet.png" alt="">
-                    <h4>Velocidad de Internet</h4>
-                </div>
-                <div class="configurador-velocidad-2">
-                    <button class="button-configurar ">150 MB</button>
-                    <button class="button-configurar">300 MB</button>
-                    <button class="button-configurar ">600 MB</button>
-                </div>
-            </div>
-            <div class="configurador-velocidad">
-                <div class="configurador-velocidad-1">
-                    <img  src="../../public/images/header/linea-internet.png" alt="">
-                    <h4>Número de líneas fijas</h4>
-                </div>
-                <div class="configurador-velocidad-2">
-                    <button class="button-configurar ">1</button>
-                    <button class="button-configurar">2</button>
-                    <button class="button-configurar ">3</button>
-                </div>
-            </div>
+<div class="tv-content">
+    <h1>Línea Televisión</h1>
+    <div class="oferta-tv">
+        <div>
+            <h2 class="tvh2">EL MEJOR CONTENIDO CON TV+</h2>
+            <p>Incluye un <strong> decodificador 4k</strong>, posibilidad de <strong>grabar programas, 19 canales de televisón</strong>(más canales tdt) y un pack básico</p>
         </div>
-        <div class="configurador-card-2">
-            <h3 class="configurar-h3-card">Línea Móvil</h3>
-            <div class="configurtar-movil-apart">
-                <h4 class="configurador-h4">Línea móvil principal</h4>
-            </div>
-            <div class="configurador-velocidad">
-                <div class="configurador-velocidad-1">
-                    <img  src="../../public/images/header/linea-internet.png" alt="">
-                    <h4>Número de líneas fijas</h4>
-                </div>
-                <div class="configurador-velocidad-2">
-                    <button class="button-configurar ">5 GB</button>
-                    <button class="button-configurar">30 GB</button>
-                    <button class="button-configurar ">Datos ilimitados</button>
-                </div>
-            </div>
-            <div class="configurtar-movil-apart">
-                <h4 class="configurador-h4">Líneas móvil adicionales</h4>
-                <button class="button-configurar ">Añadir línea móvil adicional</button>
-            </div>
-        </div>
-
-        <div class="configurador-card-2">
-            <h3 class="configurar-h3-card">TV</h3>
-            <div class="configurtar-movil-apart">
-                <h4 class="configurador-h4">Pack TV</h4>
-            </div>
-            <div class="configurador-velocidad">
-                <div class="configurador-velocidad-3">
-                    <button class="button-configurar ">Series</button>
-                    <button class="button-configurar">Infantil</button>
-                    <button class="button-configurar ">Cine</button>
-                    <button class="button-configurar ">No incluir</button>
-                </div>
-            </div>
-            <div class="configurtar-movil-apart">
-                <h4 class="configurador-h4">Subscripciones</h4>
-                <div class="checks">
-                    <label class="check-container">Samsung
-                        <input type="checkbox" checked="checked">
-                        <span class="checkmark"></span>
-                      </label>
-                      <label class="check-container">Xiaomi
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                      </label>
-                      <label class="check-container">Apple
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                      </label>
-                
-                    </div>
-                    
-            </div>
-        </div>
-        <div class="configurador-card">
-            <h3 class="configurar-h3-card">Finaliza tu pedido</h3>
-            <div class="configurador-card-container">
-                <div class="configurador-sub-card">
-                    <img class="configurador-img" src="../../public/images/note9.png" >
-                    <button class="button-configurar ">Añadir dispositivo móvil</button>
-                </div>
-                <div class="configurador-sub-card">
-                    <img class="configurador-img" src="../../public/images/oppo.png" >
-                    <button class="button-configurar ">Añadir objeto inteligente</button>
-                </div>
-                <div class="configurador-sub-card">
-                    <img class="configurador-img" src="../../public/images/alarma.jpg" >
-                    <button class="button-configurar ">Añadir servicio de alarma</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="configurador-precio">
-            <h3 class="configurar-h3-card"><strong>TOTAL 78,99 €/mes</strong></h3>
-            <button class="button-configurar ">CONTRATAR</button>
-            <button class="outline">VER DESGLOSE</button>
+        <div>
+            <h2 class="tvh2-price">5,99 €/mes</h2>
+            <button class="button">CONTRATAR</button>
         </div>
     </div>
-
+    <div class="tv-llama">
+        <img  src="../../public//images/header/linea-internet.png" alt="">
+        <h3>Si lo prefieres llama al 900 123 123 para contratarlo.</h3>
+    </div>
+    <div class="tv-container">
+        <div class="tv">
+            <img class="tv-img" src="../../public/images/tv-canales.jpg" >
+            <div class="tv-info-cont">
+                <h3>Canales incluidos</h3>
+                <div class="canales-incluidos">
+                    <p>FOX</p>
+                    <p>Boing</p>
+                    <p>FOX</p>
+                    <p>AXN</p>
+                    <p>Clan</p>
+                    <p>AXN</p>
+                    <p>TNT</p>
+                    <p>BBC One</p>
+                    <p>TNT</p>
+                    <p>Calle 13</p>
+                    <p>Calle 13</p>
+                    <p>Calle 13</p>
+                    <p>Discovery</p>
+                    <p>Discovery</p>
+                    <p>Discovery</p>
+                    <p>Nickelodeon</p>
+                    <p>Nickelodeon</p>
+                    <p>Nickelodeon</p>
+                    <p>Historia</p>
+                    <p>Historia</p>
+                    <p>Historia</p>
+                    <p>Disney Channel</p>
+                    <p>Disney Channel</p>
+                    <p>Disney Channel</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <h2 class="tv-subs-h2">TAMBIÉN PUEDES <strong>AÑADIR SUBSCRIPCIONES A OTROS SERVICIOS</strong></h2>
+    <div class="tv-subs-container">
+        <div class="tv-subs">
+            <img class="tv-subs-img" src="../../public//images/pack.jpg" >
+            <div class="tv-subs-info-cont">
+                <h2>Añade otros packs básicos adicionales</h2>
+                <p>Si a parte de servicio de TV+ quieres alguno de nuestros productos puedes combinarlos de la forma que desees. Para ello, usa nuestro configurador de tarifas.</p>
+                <button class="button">ACCEDER AL CONFIGURADOR</button>
+            </div>
+        </div>  
+    </div>
+    <div class="tv-subs-container">
+        <div class="tv-subs">
+            <img class="tv-subs-img" src="../../public//images/streaming.png" >
+            <div class="tv-subs-info-cont">
+                <h2>Añade suscripciones a servicios de Streaming</h2>
+                <p>Junto a nuestro servicio de TV+ puedes añadir otras subscripciones como Netflix, Disney+ o HBO. De esta forma podrás ver todas tus series favoritas desde un único sitio.</p>
+                <button class="button">AÑADIR SUBSCRIPCIÓN</button>
+            </div>
+        </div>  
+    </div>
+    <div class="tv-subs-container">
+        <div class="tv-subs">
+            <img class="tv-subs-img" src="../../public//images/deco.jpg" >
+            <div class="tv-subs-info-cont">
+                <h2>Adquiere decodificadores adicionales</h2>
+                <p>Para cada TV de tu casa será necesario un decodificador. En el precio de TV+ se incluye un único decodificador. Si necesitas más, puedes añadirlos por tan solo 5€/mes por decodificador.</p>
+                <button class="button">AÑADIR DECODIFICADOR</button>
+            </div>
+        </div>  
+    </div>
+    
 </div>
 
 <!--FOOTER-->
