--- a/Telefonia/views/tv.html
+++ b/Telefonia/views/tv.html
@@ -16,22 +16,34 @@
     </div>
     <div class="tv-container">
         <div class="tv">
-            <img class="tv-img" src="/images/slider1.png" >
+            <img class="tv-img" src="/images/tv-canales.jpg" >
             <div class="tv-info-cont">
                 <h3>Canales incluidos</h3>
                 <div class="canales-incluidos">
                     <p>FOX</p>
+                    <p>Boing</p>
                     <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
+                    <p>AXN</p>
+                    <p>Clan</p>
+                    <p>AXN</p>
+                    <p>TNT</p>
+                    <p>BBC One</p>
+                    <p>TNT</p>
+                    <p>Calle 13</p>
+                    <p>Calle 13</p>
+                    <p>Calle 13</p>
+                    <p>Discovery</p>
+                    <p>Discovery</p>
+                    <p>Discovery</p>
+                    <p>Nickelodeon</p>
+                    <p>Nickelodeon</p>
+                    <p>Nickelodeon</p>
+                    <p>Historia</p>
+                    <p>Historia</p>
+                    <p>Historia</p>
+                    <p>Disney Channel</p>
+                    <p>Disney Channel</p>
+                    <p>Disney Channel</p>
                 </div>
             </div>
         </div>
@@ -39,7 +51,7 @@
     <h2 class="tv-subs-h2">TAMBIÉN PUEDES <strong>AÑADIR SUBSCRIPCIONES A OTROS SERVICIOS</strong></h2>
     <div class="tv-subs-container">
         <div class="tv-subs">
-            <img class="tv-subs-img" src="/images/slider1.png" >
+            <img class="tv-subs-img" src="/images/pack.jpg" >
             <div class="tv-subs-info-cont">
                 <h2>Añade otros packs básicos adicionales</h2>
                 <p>Si a parte de servicio de TV+ quieres alguno de nuestros productos puedes combinarlos de la forma que desees. Para ello, usa nuestro configurador de tarifas.</p>
@@ -49,7 +61,7 @@
     </div>
     <div class="tv-subs-container">
         <div class="tv-subs">
-            <img class="tv-subs-img" src="/images/slider1.png" >
+            <img class="tv-subs-img" src="/images/streaming.png" >
             <div class="tv-subs-info-cont">
                 <h2>Añade suscripciones a servicios de Streaming</h2>
                 <p>Junto a nuestro servicio de TV+ puedes añadir otras subscripciones como Netflix, Disney+ o HBO. De esta forma podrás ver todas tus series favoritas desde un único sitio.</p>
@@ -59,7 +71,7 @@
     </div>
     <div class="tv-subs-container">
         <div class="tv-subs">
-            <img class="tv-subs-img" src="/images/slider1.png" >
+            <img class="tv-subs-img" src="/images/deco.jpg" >
             <div class="tv-subs-info-cont">
                 <h2>Adquiere decodificadores adicionales</h2>
                 <p>Para cada TV de tu casa será necesario un decodificador. En el precio de TV+ se incluye un único decodificador. Si necesitas más, puedes añadirlos por tan solo 5€/mes por decodificador.</p>
